--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "framer-motion": "^11.0.5",
-    "next": "13.5.4",
+    "next": "^15.5.2",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18"
